--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -24,7 +24,7 @@
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
 6. Use the user's configured `sans` font-variation-settings by default.
-7. Disable tap highlights on iOS
+7. Disable tap highlights on iOS.
 */
 
 html,
