Move forced-colors variant after dark variant
Also add test for the order of the forced-colors variant

--- a/tests/variants.test.css
+++ b/tests/variants.test.css
@@ -300,6 +300,11 @@
 :is(.dark .peer:disabled:focus:hover ~ .dark\:peer-disabled\:peer-focus\:peer-hover\:flex) {
   display: flex;
 }
+@media (forced-colors: active) {
+  .forced-colors\:flex {
+    display: flex;
+  }
+}
 @media print {
   .print\:flex {
     display: flex;
