Remove Webkit Search Cancel Button
On Chrome and Safari webkit includes a cancel button that I think preflight should hide. [MDN lists this cancel button as nonstandard][1] and Chrome and Sarafi both style this button differently.

[1]: https://developer.mozilla.org/en-US/docs/Web/CSS/::-webkit-search-cancel-button

--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -255,6 +255,13 @@ Remove the inner padding in Chrome and Safari on macOS.
 }
 
 /*
+Remove x on Chrome and Safari.
+*/
+::-webkit-search-cancel-button {
+  display: none;
+}
+
+/*
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Change font properties to `inherit` in Safari.
 */
