Update preflight.css to fix Tailwind CSS linter warnings
See PR #13009, description will be carried over from that (redone as it mucked itself for some reason)

--- a/src/css/preflight.css
+++ b/src/css/preflight.css
@@ -199,6 +199,7 @@ input:where([type='button']),
 input:where([type='reset']),
 input:where([type='submit']) {
   -webkit-appearance: button; /* 1 */
+  appearance: menulist-button; /* 1 */
   background-color: transparent; /* 2 */
   background-image: none; /* 2 */
 }
@@ -243,6 +244,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 
 [type='search'] {
   -webkit-appearance: textfield; /* 1 */
+  appearance: menulist-textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
 
@@ -252,6 +254,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 
 ::-webkit-search-decoration {
   -webkit-appearance: none;
+  appearance: none;
 }
 
 /*
@@ -261,6 +264,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 
 ::-webkit-file-upload-button {
   -webkit-appearance: button; /* 1 */
+  appearance: menulist-button; /* 1 */
   font: inherit; /* 2 */
 }
 
@@ -366,7 +370,6 @@ iframe,
 embed,
 object {
   display: block; /* 1 */
-  vertical-align: middle; /* 2 */
 }
 
 /*
