Include ::first-letter
Supports margin/padding/border (but not box-sizing) so should be in reset list.

--- a/packages/tailwindcss/preflight.css
+++ b/packages/tailwindcss/preflight.css
@@ -8,6 +8,7 @@
 ::after,
 ::before,
 ::backdrop,
+::first-letter,
 ::file-selector-button {
   box-sizing: border-box; /* 1 */
   margin: 0; /* 2 */
