--- a/packages/tailwindcss/theme.css
+++ b/packages/tailwindcss/theme.css
@@ -361,6 +361,11 @@
   --width-6xl: 72rem;
   --width-7xl: 80rem;
   --width-prose: 65ch;
+  --width-screen-sm: var(--breakpoint-sm);
+  --width-screen-md: var(--breakpoint-md);
+  --width-screen-lg: var(--breakpoint-lg);
+  --width-screen-xl: var(--breakpoint-xl);
+  --width-screen-2xl: var(--breakpoint-2xl);
 
   /* Fonts */
   --font-family-sans: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
