add missing `drop-shadow-none`

--- a/packages/tailwindcss/theme.css
+++ b/packages/tailwindcss/theme.css
@@ -310,6 +310,7 @@
   --drop-shadow-lg: 0 10px 8px rgb(0 0 0 / 0.04), 0 4px 3px rgb(0 0 0 / 0.1);
   --drop-shadow-xl: 0 20px 13px rgb(0 0 0 / 0.03), 0 8px 5px rgb(0 0 0 / 0.08);
   --drop-shadow-2xl: 0 25px 25px rgb(0 0 0 / 0.15);
+  --drop-shadow-none: 0 0 #0000;
 
   /* Spacing */
   --spacing-px: 1px;
