--- a/packages/tailwindcss/theme.css
+++ b/packages/tailwindcss/theme.css
@@ -435,7 +435,8 @@
   --transition-timing-function-in: cubic-bezier(0.4, 0, 1, 1);
   --transition-timing-function-out: cubic-bezier(0, 0, 0.2, 1);
   --transition-timing-function-in-out: cubic-bezier(0.4, 0, 0.2, 1);
-
+}
+@theme {
   @keyframes spin {
     to {
       transform: rotate(360deg);
