--- a/packages/internal-postcss-fix-relative-paths/src/fixtures/example-project/src/index.css
+++ b/packages/internal-postcss-fix-relative-paths/src/fixtures/example-project/src/index.css
@@ -1,4 +1,4 @@
-@content "./**/*.ts";
-@content "!./**/*.ts";
+@source "./**/*.ts";
+@source "!./**/*.ts";
 @plugin "./plugin.js";
 @plugin "./what\"s-this.js";
